--- a/Settings.settings
+++ b/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="UserSerialPort" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="stm8s_bootload" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="readyCmd" Type="System.string" Scope="User">
@@ -51,6 +51,9 @@
 0xb9,0x90,0x5c,0xb6,0x00,0x4c,0xb7,0x00,0xb6,0x00,0xb1,0x04,0x25,0xea,0x81,0x4a,
 0xb7,0x00,0x1c,0x00,0x03,0xf6,0xb7,0x02,0xb6,0x00,0xb4,0x02,0xb7,0x01,0x33,0x00,
 0xb6,0x00,0xb4,0x02,0xf7,0xb6,0x01,0x81,0xaa,0xcc</Value>
+    </Setting>
+    <Setting Name="baud" Type="System.String" Scope="User">
+      <Value Profile="(Default)">115200</Value>
     </Setting>
   </Settings>
 </SettingsFile>
